--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@ffmpeg/ffmpeg": "^0.10.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "@tensorflow/tfjs": "^3.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
