--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ffmpeg/ffmpeg": "^0.10.1",
     "@tensorflow/tfjs": "^3.7.0",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.7.1",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
   },
