--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-saver": "^2.0.5",
     "jszip": "^3.7.1",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.16.1",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
